@@ -234,9 +234,6 @@
 
       do ni = 1, ncat-1 
 
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
          do ij = 1, icells       ! aice(i,j) > puny
             i = indxi(ij)
             j = indxj(ij)
@@ -408,9 +405,6 @@
       ! Find area lost due to melting of thin (category 1) ice
       !-----------------------------------------------------------------
 
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
       do ij = 1, icells    ! remap_flag = .true.
          i = indxi(ij)
          j = indxj(ij)
@@ -473,9 +467,6 @@
       dvice(:,:,:) = c0i
 
       do ni = 1, ncat-1
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
          do ij = 1, icells   ! remap_flag = .true.
             i = indxi(ij)
             j = indxj(ij)
@@ -570,9 +561,6 @@
       ! Make sure hice(i,j,1) >= minimum ice thickness hi_min.
       !-----------------------------------------------------------------
 
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
       do ij = 1, icells          ! remap_flag = .true.
          i = indxi(ij)
          j = indxj(ij)
