@@ -299,9 +299,6 @@
       dvirdgdt (:,:) = c0i
       opening  (:,:) = c0i
 
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
       do j = jlo, jhi
       do i = ilo, ihi
 
@@ -348,9 +345,6 @@
 
       do niter = 1, nitermax    ! iteration counter
 
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
       do j = jlo, jhi
       do i = ilo, ihi
 
@@ -384,9 +378,6 @@
       ! would be removed.  Reduce the opening rate proportionately.
       !-----------------------------------------------------------------
       do ni = 1, ncat
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
          do j = jlo, jhi
          do i = ilo, ihi
 
@@ -464,9 +455,6 @@
 
       asum_error = .false. 
 
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
       do j = jlo, jhi
       do i = ilo, ihi
 
@@ -581,9 +569,6 @@
          if (krdg_redist==0) then ! Hibler redistribution function
 
             do ni = 1, ncat
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
                do j = jlo, jhi
                do i = ilo, ihi
 
@@ -602,9 +587,6 @@
          elseif (krdg_redist==1) then  ! exponential function
 
             do ni = 1, ncat
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
                do j = jlo, jhi
                do i = ilo, ihi
 
@@ -623,9 +605,6 @@
 
          endif                  ! krdg_redist
 
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
          do j = jlo, jhi
          do i = ilo, ihi
 
@@ -730,9 +709,6 @@
 
       Gsum(:,:,-1) = c0i
 
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
       do j = jlo, jhi
       do i = ilo, ihi
          if (aice0(i,j) > puny) then
@@ -744,9 +720,6 @@
       enddo
 
       do ni = 1, ncat
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
          do j = jlo, jhi
          do i = ilo, ihi
             if (aicen(i,j,ni) > puny) then
@@ -763,9 +736,6 @@
       worka(:,:) = c1i / Gsum(:,:,ncat)
 
       do ni = 0, ncat
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
          do j = jlo, jhi
          do i = ilo, ihi
             Gsum(i,j,ni) = Gsum(i,j,ni) * worka(i,j)
@@ -821,9 +791,6 @@
          xtmp = c1i / (c1i-exp(-astari))
  
          do ni = -1, ncat
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
             do j = jlo, jhi
             do i = ilo, ihi
                Gsum(i,j,ni) = exp(-Gsum(i,j,ni)*astari) * xtmp
@@ -834,9 +801,6 @@
          ! compute apartic
 
          do ni = 0, ncat
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
             do j = jlo, jhi
             do i = ilo, ihi
                apartic(i,j,ni) = Gsum(i,j,ni-1) - Gsum(i,j,ni)
@@ -1061,9 +1025,6 @@
 
       neg_aice0 = .false.
 
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
       do j = jlo, jhi
       do i = ilo, ihi
          aice0(i,j) = aice0(i,j)                               &
@@ -1133,9 +1094,6 @@
 
          large_ardg = .false.
 
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
          do ij = 1, icells
             i = indxi(ij)
             j = indxj(ij)
@@ -1206,9 +1164,6 @@
       !-----------------------------------------------------------------
 
          do k = 1, nilyr
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
             do ij = 1, icells
                i = indxi(ij)
                j = indxj(ij)
@@ -1322,9 +1277,6 @@
       ! category n2.
       !-----------------------------------------------------------------
 
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
             do ij = 1, icells
                i = indxi(ij)
                j = indxj(ij)
@@ -1341,9 +1293,6 @@
       ! Transfer ice energy to category n2
       !-----------------------------------------------------------------
             do k = 1, nilyr
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
                do ij = 1, icells
                   i = indxi(ij)
                   j = indxj(ij)
@@ -1419,9 +1368,6 @@
       !-----------------------------------------------------------------
 
       do ni = 1, ncat
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
          do j = jlo, jhi
          do i = ilo, ihi
             asum(i,j) = asum(i,j) + aicen(i,j,ni)
