@@ -336,9 +336,6 @@
       ! Compute the volume, area, and thickness of new ice.
       !-----------------------------------------------------------------
 
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
       do ij = 1, icells
          i = indxi(ij)
          j = indxj(ij)
@@ -450,9 +447,6 @@
 
       do ni = 1, ncat
 
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
          do ij = 1, kcells
             i = indxi3(ij)
             j = indxj3(ij)
@@ -462,9 +456,6 @@
          enddo                  ! ij
 
          do k=1,nilyr
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
             do ij = 1, kcells
                i = indxi3(ij)
                j = indxj3(ij)
@@ -480,9 +471,6 @@
       ! Combine new ice grown in open water with category 1 ice.
       ! NOTE: vsnon and esnon are unchanged.
       !-----------------------------------------------------------------
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
       do ij = 1, jcells
          i = indxi2(ij)
          j = indxj2(ij)
@@ -498,9 +486,6 @@
       enddo                     ! ij
 
       do k = 1, nilyr
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
          do ij = 1, jcells
             i = indxi2(ij)
             j = indxj2(ij)
@@ -581,9 +566,6 @@
       ! Melt the ice and increment fluxes.
       !-----------------------------------------------------------------
 
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
          do ij = 1, icells
             i = indxi(ij)
             j = indxj(ij)
@@ -621,9 +603,6 @@
          enddo                  ! ij
 
          do k = 1, nilyr
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
             do ij = 1, icells
                i = indxi(ij)
                j = indxj(ij)
@@ -716,9 +695,6 @@
 
          jcells = 0             ! freeboard adjustment counter
 
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
          do ij = 1, icells      ! aicen > puny
             i = indxi(ij)
             j = indxj(ij)
@@ -784,9 +760,6 @@
       ! Adjust ice energy.
       !-----------------------------------------------------------------
          do k = 1, nilyr
-!DIR$ CONCURRENT !Cray
-!cdir nodep      !NEC
-!ocl novrec      !Fujitsu
             do ij = 1, jcells   ! just cells with freeboard adjustment
                i = indxi2(ij)
                j = indxj2(ij)
